--- a/MovieTinder/Views/Shared/_Layout.cshtml
+++ b/MovieTinder/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Movie Tinder</title>
+    <script src="~/js/lib/jquery/jquery.js"></script>
+    <script src="~/js/moviecarosel.js"></script>
 </head>
 <body>
     @RenderBody()
